--- a/code/platformio.ini
+++ b/code/platformio.ini
@@ -10,13 +10,16 @@
 
 [env:esp32dev]
 platform = espressif32
-board = esp32dev
+#board = esp32dev
+board = reflowctrl-ESP32-S2FH2
 framework = arduino
 upload_speed = 460800
 upload_port = /dev/cu.usbmodem01
 monitor_speed = 115200
 upload_resetmethod = nodemcu
 board_build.mcu = esp32s2
+board_build.flash_size = 2048k
+board_upload.maximum_size = 2097152
 lib_deps = 
 	fastled/FastLED@^3.5.0
 	olikraus/U8g2@^2.32.8
@@ -26,3 +29,6 @@ lib_deps =
 platform_packages = 
 	framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32#2.0.0-alpha1
 	platformio/tool-esptoolpy @ ~1.30100
+	
+; Specify the flash size
+board_build.partitions = ptable-2MB.csv
